# masks_project_10.2

./: .flake8  README.md  pyproject.toml
src/: masks.py  processing.py  widget.py
tests/: test_processing.py  test_widget.py
